docs: add first example of endpoint documentation
